[package]
name = "blocksy3"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive", "rc"] }
anyhow = "1.0.38"
futures = "0.3.12"
async-channel = "1.5.1"
log = "0.4.13"
toml = "0.5.8"
