[package]
name = "blocksy3"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NB bumping serde version breaks tikv build 2021/04/20
serde = { version = "1.0.106", features = ["derive"] }
anyhow = "1.0.40"
futures = { version = "0.3.14", features = ["executor"] }
async-channel = "1.6.1"
log = "0.4.14"
toml = "0.5.8"
env_logger = "0.8.3"
serde_cbor = "0.11.1"
